# hms

./: iitm_vm  iitm_vm.pub  render.yaml  run.sh  setup.sh
frontend/: README.md  index.html  package.json  vercel.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: admin.js  auth.js  client.js  doctor.js  patient.js
frontend/src/components/: AdminShell.vue  AppToast.vue  DepartmentIcon.vue  DoctorShell.vue  PatientShell.vue
frontend/src/composables/: useToast.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js  doctor.js  patient.js
frontend/src/styles/: base.css  components.css  layout.css
frontend/src/utils/: departmentIcons.js
frontend/src/views/: AdminAppointments.vue  AdminDashboard.vue  AdminDepartments.vue  AdminDoctors.vue  AdminPatients.vue  DoctorAppointments.vue  DoctorAvailability.vue  DoctorDashboard.vue  DoctorPatientHistory.vue  DoctorProfile.vue  ForbiddenView.vue  HomeView.vue  LoginView.vue  PatientAppointments.vue  PatientDashboard.vue  PatientHistory.vue  PatientProfile.vue  RegisterView.vue
server/: README.md  api.yaml  app.py  celery_app.py  celerybeat-schedule  config.py  decorators.py  dump.rdb  http_utils.py  mailer.py  models.py  pyproject.toml  serializers.py  start.sh  worker.py  wsgi.py
server/controllers/: __init__.py  admin.py  auth.py  doctor.py  patient.py
server/instance/: hms.db
server/instance/exports/: treatments_patient_2_20260412165612.csv  treatments_patient_6_20260412171639.csv
server/tasks/: __init__.py  exports.py  reminders.py  reports.py
